# BudBridge

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/budbridge/: BluetoothHandler.kt  BudBridgeService.kt  ClaimTile.kt  ClaimWidget.kt  HandoffManager.kt  HttpServer.kt  MainActivity.kt  NsdHelper.kt  Prefs.kt
android/app/src/main/res/drawable/: ic_headphone.xml
android/app/src/main/res/layout/: activity_main.xml  widget_claim.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: widget_info.xml
android/gradle/: libs.versions.toml
docs/: battery-optimization.md  troubleshooting.md
pc/: build.py  config.toml.example  pyproject.toml  requirements.txt
pc/assets/: generate_icons.py
pc/budbridge/: __init__.py  bluetooth.py  config.py  discovery.py  handoff.py  hotkey.py  main.py  notify.py  server.py  startup.py  tray.py
